# wattson

./: .gitignore  README.md  pyproject.toml  setup.py
doc/: add_docker_host.md  create_suricata_rules.md  dependency_decisions.yml  import_export_elasticsearch_data.md  import_export_kibana_dashboards.md  mtu_logics.md  postfix_service.md  replace_host_with_docker_host.md  rtu_logics.md  sip_service.md  webmin_service.md  zeek.md
install/: component_install.py  install_command.py  log_screen.py  log_task.py
install/components/: apt_install.py  containernet_install.py  ipmininet_install.py  libiec_install.py  ovs_install.py  wattson-ovs.service
scenarios/cigre_mv/: datapoints.yml  extensions.yml  graph.yml  powernetwork.yml
scenarios/powerowl-example/: extensions.yml  generate.py  power-grid.yml  scenario-type
scenarios/powerowl_example/: data-points.yml  network.yml  power-grid.yml
scenarios/powerowl_test/: extensions.yml  facilities.yml  network.yml
wattson/: __main__.py
wattson/cosimulation/: __init__.py
wattson/datapoints/: data_point.py  data_point_loader.py  manager.py
wattson/deployment/: __main__.py  default_deployment.py  interface.py
wattson/exceptions/: host_already_exists_exception.py  host_not_found_exception.py  interface_not_found_exception.py  invalid_argument_exception.py  link_not_found_exception.py
wattson/iec61850/: iec61850_control_object.py  iec61850_data_attribute.py  iec61850_data_object.py  iec61850_data_set.py  iec61850_logical_device.py  iec61850_logical_node.py  iec61850_mms_array.py  (+7 more)
wautorunner/: __main__.py  setup.py
(+883 files in other folders)
