[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wattson"
version = "2.1.0"
description = "Wattson Co-Simulation Environment"
readme = "README.md"
requires-python = ">=3.12"

authors = [
  { name = "Lennart Bader" }
]

dependencies = [
  "wheel",
  "ifcfg",
  "testresources",
  "c104",
  "python-dateutil",
  "docker",
  "drawsvg",
  "flask",
  "ipaddress>=1.0.23",
  "matplotlib>=3.1.2",
  "more_itertools>=5.0.0",
  "natsort",
  "netifaces>=0.11.0",
  "networkx>=2.5",
  "numba>=0.57.1",
  "numpy",
  "pandapower>=3.0.0",
  "pandas>=1.3.4",
  "psutil>=5.7.0",
  "pydot",
  "pymodbus",
  "pyprctl",
  "pytest",
  "igraph>=0.9.9",
  "pathfinding",
  "qtpy",
  "pydantic",
  "pytimeparse2>=1.6.0",
  "PyQt6>=6.5.2",
  "pyroute2",
  "PySide6",
  "PyQt6-WebEngine>=6.5.0",
  "pystemd",
  "pywebview>=3.3.5",
  "pyyaml>=5.4",
  "pyzmq>=20.0.0",
  "scapy>=2.4.4",
  "scipy",
  "setuptools>=65.5.1",
  "shapely",
  "sqlalchemy>=1.3.16",
  "tabulate",
  "twisted>=22.2.0",
  "unidecode",
  "python-iptables @ git+https://github.com/lennart-bader/python-iptables.git"
]

[project.scripts]
wattson = "wattson.__main__:main"

[tool.setuptools.packages.find]
include = ["wattson", "wattson.*"]

[tool.setuptools.package-data]
"*" = ["*"]
